Criação do segundo parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,8 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro pariatur iusto corrupti eum fuga cum delectus recusandae provident quam. Ullam sunt voluptates quibusdam voluptate repellendus, assumenda delectus harum. Maiores, maxime.</p>
     <hr>
+    <p>Segundo Lorem Ipsum
+        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda totam nam repellendus ad ipsa? Ratione accusamus maxime, exercitationem sapiente non earum aliquid architecto alias necessitatibus, iste reprehenderit officia soluta! Fugit.</p>
 </body>
 </html>
